--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             const passwordField = document.getElementById('user-password');
             const userPassword = passwordField.value;
 
-            if (userEmail == 'admin@mail.com' && userPassword == 'lol') {
+            if (userEmail == '' && userPassword == '') {
                 window.location.href = 'banking.html'
             }
 
