--- a/banking.html
+++ b/banking.html
@@ -59,7 +59,7 @@
         </section>
 
     </main>
-    <script>
+    <!-- <script>
         document.getElementById('deposit-button').addEventListener('click', function () {
             const depositInput = document.getElementById('deposit-input');
             const newDepositAmountText = depositInput.value;
@@ -115,8 +115,57 @@
 
         })
 
-    </script>
+    </script> -->
+    <script>
+        //deposit//
+        document.getElementById('deposit-button').addEventListener('click', function () {
+            const depositInput = document.getElementById('deposit-input');
+            const depositAmountText = depositInput.value;
+            const depositAmount = parseFloat(depositAmountText);
 
+            //get current deposit//
+            const depositTotal = document.getElementById('deposit-total');
+
+            const depositTotalText = depositTotal.innerText;
+            const previousDepositTotal = parseFloat(depositTotalText);
+
+            depositTotal.innerText = previousDepositTotal + depositAmount;
+            // update balance
+            const balanceTotal = document.getElementById('balance-total');
+            const balanceTotalText = balanceTotal.innerText;
+            const previousBalanceTotal = parseFloat(balanceTotalText);
+
+            balanceTotal.innerText = previousBalanceTotal + depositAmount;
+
+            //clear input field//
+            depositInput.value = '';
+        })
+
+        // withdraw part
+        document.getElementById('withdraw-button').addEventListener('click', function () {
+            const withdrawInput = document.getElementById('withdraw-input');
+            const withdrawAmountText = withdrawInput.value;
+            const withdrawAmount = parseFloat(withdrawAmountText);
+
+            // update withdraw total
+            const WithdrawTotal = document.getElementById('withdraw-total');
+            const previousWithdrawTotalText = WithdrawTotal.innerText;
+            const previousWithdrawTotal = parseFloat(previousWithdrawTotalText);
+
+            WithdrawTotal.innerText = previousWithdrawTotal + withdrawAmount;
+
+            //update balance after withdraw
+
+            const balanceTotal = document.getElementById('balance-total');
+            const balanceTotalText = balanceTotal.innerText;
+            const previousBalanceTotal = parseFloat(balanceTotalText);
+            balanceTotal.innerText = previousBalanceTotal - withdrawAmount;
+
+            //clear input field//
+            withdrawInput.value = '';
+        })
+
+    </script>
 </body>
 
 </html>
