--- a/banking.html
+++ b/banking.html
@@ -59,111 +59,118 @@
         </section>
 
     </main>
-    <!-- <script>
-        document.getElementById('deposit-button').addEventListener('click', function () {
-            const depositInput = document.getElementById('deposit-input');
-            const newDepositAmountText = depositInput.value;
-            const newDepositAmount = parseFloat(newDepositAmountText);
 
-            //update deposit total
-            const depositTotal = document.getElementById('deposit-total');
-            const previousDepositText = depositTotal.innerText;
-            const previousDepositAmount = parseFloat(previousDepositText);
-            const newDepositTotal = previousDepositAmount + newDepositAmount;
+    <script>
 
-            depositTotal.innerText = newDepositTotal;
+        function doubleIt(num) {
+            const result = num * 2;
+            return result;
+        }
+        const fiveDouble = doubleIt(5);
+        const severDouble = doubleIt(7);
 
-            //update balance
+        function getInputValue(inputId) {
+            debugger;
+            const inputField = document.getElementById(inputId);
+            const inputAmountText = inputField.value;
+            const amountValue = parseFloat(inputAmountText);
+            // clear input field
+            inputField.value = '';
+            return amountValue;
+        }
+
+        function updateTotalField(totalFieldId, amount) {
+            // debugger;
+            const totalElement = document.getElementById(totalFieldId);
+            const totalText = totalElement.innerText;
+            const previousTotal = parseFloat(totalText);
+            totalElement.innerText = previousTotal + amount;
+        }
+
+        function getCurrentBalance() {
             const balanceTotal = document.getElementById('balance-total');
             const balanceTotalText = balanceTotal.innerText;
             const previousBalanceTotal = parseFloat(balanceTotalText);
-            const newBalanceTotal = previousBalanceTotal + newDepositAmount;
-            balanceTotal.innerText = newBalanceTotal;
-            // clear the deposit input field
-            depositInput.value = '';
+            return previousBalanceTotal;
+        }
 
-        });
-
-        //withdraw
-        document.getElementById('withdraw-button').addEventListener('click', function () {
-            // console.log('withdraw clicked');
-            const withdrawInput = document.getElementById('withdraw-input');
-            const withdrawAmountText = withdrawInput.value;
-            const newWithdrawAmount = parseFloat(withdrawAmountText);
-            console.log(withdrawAmountText);
-            //set withdraw total
-            const withdrawTotal = document.getElementById("withdraw-total");
-            const previousWithdrawText = withdrawTotal.innerText;
-            const previousWithdrawTotal = parseFloat(previousWithdrawText);
-
-            const newWithdrawTotal = previousWithdrawTotal + newWithdrawAmount;
-
-            withdrawTotal.innerText = newWithdrawTotal;
-
-
-            // update balance
-
+        function updateBalance(amount, isAdd) {
             const balanceTotal = document.getElementById('balance-total');
-            const previousBalanceText = balanceTotal.innerText;
-            const previousBalanceTotal = parseFloat(previousBalanceText);
-            const newBalanceTotal = previousBalanceTotal - newWithdrawAmount;
+            /*
+             const balanceTotalText = balanceTotal.innerText;
+            const previousBalanceTotal = parseFloat(balanceTotalText); */
+            const previousBalanceTotal = getCurrentBalance();
+            if (isAdd == true) {
+                balanceTotal.innerText = previousBalanceTotal + amount;
+            }
+            else {
+                balanceTotal.innerText = previousBalanceTotal - amount;
+            }
+        }
 
-            balanceTotal.innerText = newBalanceTotal;
-
-            // clear the deposit input field
-            withdrawInput.value = '';
-
-        })
-
-    </script> -->
-    <script>
-        //deposit//
         document.getElementById('deposit-button').addEventListener('click', function () {
+            /* 
             const depositInput = document.getElementById('deposit-input');
             const depositAmountText = depositInput.value;
-            const depositAmount = parseFloat(depositAmountText);
+            const depositAmount = parseFloat(depositAmountText); */
 
-            //get current deposit//
+
+            // get and update deposit total
+            /*  
             const depositTotal = document.getElementById('deposit-total');
+             const depositTotalText = depositTotal.innerText;
+             const previousDepositTotal = parseFloat(depositTotalText);
+         
+             depositTotal.innerText = previousDepositTotal + depositAmount; */
 
-            const depositTotalText = depositTotal.innerText;
-            const previousDepositTotal = parseFloat(depositTotalText);
 
-            depositTotal.innerText = previousDepositTotal + depositAmount;
             // update balance
+            /* 
             const balanceTotal = document.getElementById('balance-total');
             const balanceTotalText = balanceTotal.innerText;
             const previousBalanceTotal = parseFloat(balanceTotalText);
+            balanceTotal.innerText = previousBalanceTotal + depositAmount; */
+            const depositAmount = getInputValue('deposit-input');
+            if (depositAmount > 0) {
+                updateTotalField('deposit-total', depositAmount);
+                updateBalance(depositAmount, true);
+            }
+        });
 
-            balanceTotal.innerText = previousBalanceTotal + depositAmount;
-
-            //clear input field//
-            depositInput.value = '';
-        })
-
-        // withdraw part
+        // handle withdraw button 
         document.getElementById('withdraw-button').addEventListener('click', function () {
+            /*     
             const withdrawInput = document.getElementById('withdraw-input');
-            const withdrawAmountText = withdrawInput.value;
-            const withdrawAmount = parseFloat(withdrawAmountText);
+                const withdrawAmountText = withdrawInput.value;
+                const withdrawAmount = parseFloat(withdrawAmountText); */
 
-            // update withdraw total
-            const WithdrawTotal = document.getElementById('withdraw-total');
-            const previousWithdrawTotalText = WithdrawTotal.innerText;
+
+            // get and update withdraw total
+            /* 
+            const withdrawTotal = document.getElementById('withdraw-total');
+            const previousWithdrawTotalText = withdrawTotal.innerText;
             const previousWithdrawTotal = parseFloat(previousWithdrawTotalText);
+            withdrawTotal.innerText = previousWithdrawTotal + withdrawAmount; */
 
-            WithdrawTotal.innerText = previousWithdrawTotal + withdrawAmount;
 
-            //update balance after withdraw
+            // update balance after withdraw
+            /* 
+                const balanceTotal = document.getElementById('balance-total');
+                const balanceTotalText = balanceTotal.innerText;
+                const previousBalanceTotal = parseFloat(balanceTotalText);
+            
+                balanceTotal.innerText = previousBalanceTotal - withdrawAmount; */
 
-            const balanceTotal = document.getElementById('balance-total');
-            const balanceTotalText = balanceTotal.innerText;
-            const previousBalanceTotal = parseFloat(balanceTotalText);
-            balanceTotal.innerText = previousBalanceTotal - withdrawAmount;
-
-            //clear input field//
-            withdrawInput.value = '';
-        })
+            const withdrawAmount = getInputValue('withdraw-input');
+            const currentBalance = getCurrentBalance();
+            if (withdrawAmount > 0 && withdrawAmount < currentBalance) {
+                updateTotalField('withdraw-total', withdrawAmount);
+                updateBalance(withdrawAmount, false);
+            }
+            if (withdrawAmount > currentBalance) {
+                console.log('You can not withdraw more than what you have in your account');
+            }
+        });
 
     </script>
 </body>
